--- a/scripts/3D_visualisation_map.ipynb
+++ b/scripts/3D_visualisation_map.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "**Date:** 2025-12-03\n",
     "\n",
-    "**Authors:** Damien Bouffard,\n",
+    "**Authors:** Damien Bouffard\n",
     "\n",
     "**Summary:** This notebook provides tools to visualise 3D lake model output .\n",
     "\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "471dd423",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,6 @@
     "\n",
     "\n",
     "from functions_D3D import fetch_and_save_alplakes_data_map, fetch_and_save_alplakes_point_data, plot_temperature_timeseries, plot_alplakes_pcolormesh\n",
-    "\n",
     "from functions_D3D import fetch_and_save_alplakes_data_transect, plot_alplakes_transect, plot_alplakes_transect_timeseries\n",
     "\n"
    ]
