adding inflow setup

--- a/scripts/1D_in_dev_scripts.ipynb
+++ b/scripts/1D_in_dev_scripts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "ca9d30cf",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
     "\n",
     "def load_lake_data(model, lake, start, stop, variables=\"T\", \n",
     "                   local_path=None, save_csv=None, chunk_months=12, \n",
-    "                   force_download=False):\n",
+    "                   force_download=False, file_priority='dat'):\n",
     "    \"\"\"\n",
     "    Smart function to load lake simulation data from local file or API.\n",
     "    \n",
@@ -270,8 +270,21 @@
     "        Path to check for local data file. Can be:\n",
     "        - CSV file: 'data/geneva/temperature.csv'\n",
     "        - DAT file: 'data/geneva/T_out.dat'\n",
-    "        - Directory: 'data/geneva' (will look for T_out.dat or *.csv)\n",
+    "        - Directory: 'data/geneva' (will search for files based on file_priority)\n",
     "        If None, always downloads from API\n",
+    "    save_csv : str, optional\n",
+    "        Path to save downloaded data as CSV (default: None)\n",
+    "    chunk_months : int, optional\n",
+    "        Number of months per chunk when downloading (default: 12)\n",
+    "    force_download : bool, optional\n",
+    "        If True, always download from API even if local file exists (default: False)\n",
+    "    file_priority : str, optional\n",
+    "        When local_path is a directory with multiple files, which to prioritize:\n",
+    "        - 'dat': Prioritize .dat files over .csv (default)\n",
+    "        - 'csv': Prioritize .csv files over .dat\n",
+    "        Example: If directory has both T_out.dat and temperature.csv:\n",
+    "            file_priority='dat' → loads T_out.dat\n",
+    "            file_priority='csv' → loads temperature.csv\n",
     "    save_csv : str, optional\n",
     "        Path to save downloaded data as CSV (default: None)\n",
     "    chunk_months : int, optional\n",
@@ -306,12 +319,24 @@
     "    \n",
     "    if local_path and not force_download:\n",
     "        if os.path.isdir(local_path):\n",
-    "            # Check for common filenames in the directory\n",
-    "            possible_files = [\n",
-    "                os.path.join(local_path, 'T_out.dat'),\n",
-    "                os.path.join(local_path, 'temperature.csv'),\n",
-    "                os.path.join(local_path, f'{lake}_temperature.csv'),\n",
-    "            ]\n",
+    "            # Check for common filenames in the directory based on priority\n",
+    "            if file_priority == 'dat':\n",
+    "                # Prioritize DAT files\n",
+    "                possible_files = [\n",
+    "                    os.path.join(local_path, 'T_out.dat'),\n",
+    "                    os.path.join(local_path, 'temperature.csv'),\n",
+    "                    os.path.join(local_path, f'{lake}_temperature.csv'),\n",
+    "                ]\n",
+    "            elif file_priority == 'csv':\n",
+    "                # Prioritize CSV files\n",
+    "                possible_files = [\n",
+    "                    os.path.join(local_path, 'temperature.csv'),\n",
+    "                    os.path.join(local_path, f'{lake}_temperature.csv'),\n",
+    "                    os.path.join(local_path, 'T_out.dat'),\n",
+    "                ]\n",
+    "            else:\n",
+    "                raise ValueError(f\"file_priority must be 'dat' or 'csv', got: {file_priority}\")\n",
+    "            \n",
     "            for file_path in possible_files:\n",
     "                if os.path.exists(file_path):\n",
     "                    local_file_path = file_path\n",
@@ -417,7 +442,425 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "id": "e62abc71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Local file not found at: ../data/Aegeri/ajegeri.csv\n",
+      "Downloading from API...\n",
+      "Fetching data from 2019-01-01 00:00:00 to 2021-01-01 00:00:00 in 12-month chunks...\n",
+      "  Chunk 1: 2019-01-01 to 2020-01-01... ✓ (2920 rows)\n",
+      "  Chunk 2: 2020-01-01 to 2021-01-01... ✓ (2928 rows)\n",
+      "\n",
+      "Combining 2 chunks...\n",
+      "✓ Total: 5848 rows\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Datetime</th>\n",
+       "      <th>-81.000</th>\n",
+       "      <th>-80.000</th>\n",
+       "      <th>-79.000</th>\n",
+       "      <th>-78.000</th>\n",
+       "      <th>-77.000</th>\n",
+       "      <th>-76.000</th>\n",
+       "      <th>-75.000</th>\n",
+       "      <th>-74.000</th>\n",
+       "      <th>-73.000</th>\n",
+       "      <th>...</th>\n",
+       "      <th>-9.000</th>\n",
+       "      <th>-8.000</th>\n",
+       "      <th>-7.000</th>\n",
+       "      <th>-6.000</th>\n",
+       "      <th>-5.000</th>\n",
+       "      <th>-4.000</th>\n",
+       "      <th>-3.000</th>\n",
+       "      <th>-2.000</th>\n",
+       "      <th>-1.000</th>\n",
+       "      <th>-0.000</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019-01-01 01:00:02.880</td>\n",
+       "      <td>5.952</td>\n",
+       "      <td>5.952</td>\n",
+       "      <td>5.952</td>\n",
+       "      <td>5.952</td>\n",
+       "      <td>5.952</td>\n",
+       "      <td>5.951</td>\n",
+       "      <td>5.951</td>\n",
+       "      <td>5.950</td>\n",
+       "      <td>5.950</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.897</td>\n",
+       "      <td>5.896</td>\n",
+       "      <td>5.894</td>\n",
+       "      <td>5.893</td>\n",
+       "      <td>5.891</td>\n",
+       "      <td>5.890</td>\n",
+       "      <td>5.888</td>\n",
+       "      <td>5.885</td>\n",
+       "      <td>5.882</td>\n",
+       "      <td>5.876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2019-01-01 04:00:02.880</td>\n",
+       "      <td>5.949</td>\n",
+       "      <td>5.949</td>\n",
+       "      <td>5.949</td>\n",
+       "      <td>5.949</td>\n",
+       "      <td>5.949</td>\n",
+       "      <td>5.948</td>\n",
+       "      <td>5.948</td>\n",
+       "      <td>5.948</td>\n",
+       "      <td>5.947</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.890</td>\n",
+       "      <td>5.888</td>\n",
+       "      <td>5.886</td>\n",
+       "      <td>5.885</td>\n",
+       "      <td>5.883</td>\n",
+       "      <td>5.881</td>\n",
+       "      <td>5.879</td>\n",
+       "      <td>5.876</td>\n",
+       "      <td>5.872</td>\n",
+       "      <td>5.866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2019-01-01 07:00:02.880</td>\n",
+       "      <td>5.947</td>\n",
+       "      <td>5.946</td>\n",
+       "      <td>5.946</td>\n",
+       "      <td>5.946</td>\n",
+       "      <td>5.946</td>\n",
+       "      <td>5.945</td>\n",
+       "      <td>5.945</td>\n",
+       "      <td>5.945</td>\n",
+       "      <td>5.944</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.883</td>\n",
+       "      <td>5.882</td>\n",
+       "      <td>5.880</td>\n",
+       "      <td>5.878</td>\n",
+       "      <td>5.876</td>\n",
+       "      <td>5.875</td>\n",
+       "      <td>5.872</td>\n",
+       "      <td>5.870</td>\n",
+       "      <td>5.866</td>\n",
+       "      <td>5.860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2019-01-01 10:00:02.880</td>\n",
+       "      <td>5.944</td>\n",
+       "      <td>5.944</td>\n",
+       "      <td>5.944</td>\n",
+       "      <td>5.943</td>\n",
+       "      <td>5.943</td>\n",
+       "      <td>5.943</td>\n",
+       "      <td>5.942</td>\n",
+       "      <td>5.942</td>\n",
+       "      <td>5.942</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.883</td>\n",
+       "      <td>5.882</td>\n",
+       "      <td>5.881</td>\n",
+       "      <td>5.880</td>\n",
+       "      <td>5.879</td>\n",
+       "      <td>5.878</td>\n",
+       "      <td>5.877</td>\n",
+       "      <td>5.876</td>\n",
+       "      <td>5.874</td>\n",
+       "      <td>5.870</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2019-01-01 13:00:02.880</td>\n",
+       "      <td>5.942</td>\n",
+       "      <td>5.942</td>\n",
+       "      <td>5.942</td>\n",
+       "      <td>5.941</td>\n",
+       "      <td>5.941</td>\n",
+       "      <td>5.941</td>\n",
+       "      <td>5.940</td>\n",
+       "      <td>5.940</td>\n",
+       "      <td>5.940</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.893</td>\n",
+       "      <td>5.894</td>\n",
+       "      <td>5.894</td>\n",
+       "      <td>5.895</td>\n",
+       "      <td>5.896</td>\n",
+       "      <td>5.897</td>\n",
+       "      <td>5.897</td>\n",
+       "      <td>5.897</td>\n",
+       "      <td>5.896</td>\n",
+       "      <td>5.892</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5843</th>\n",
+       "      <td>2020-12-31 10:00:02.880</td>\n",
+       "      <td>6.021</td>\n",
+       "      <td>6.021</td>\n",
+       "      <td>6.021</td>\n",
+       "      <td>6.020</td>\n",
+       "      <td>6.020</td>\n",
+       "      <td>6.020</td>\n",
+       "      <td>6.019</td>\n",
+       "      <td>6.018</td>\n",
+       "      <td>6.018</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.925</td>\n",
+       "      <td>5.923</td>\n",
+       "      <td>5.922</td>\n",
+       "      <td>5.921</td>\n",
+       "      <td>5.919</td>\n",
+       "      <td>5.918</td>\n",
+       "      <td>5.916</td>\n",
+       "      <td>5.914</td>\n",
+       "      <td>5.911</td>\n",
+       "      <td>5.906</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5844</th>\n",
+       "      <td>2020-12-31 13:00:02.880</td>\n",
+       "      <td>6.016</td>\n",
+       "      <td>6.016</td>\n",
+       "      <td>6.016</td>\n",
+       "      <td>6.016</td>\n",
+       "      <td>6.015</td>\n",
+       "      <td>6.015</td>\n",
+       "      <td>6.014</td>\n",
+       "      <td>6.014</td>\n",
+       "      <td>6.013</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.936</td>\n",
+       "      <td>5.936</td>\n",
+       "      <td>5.935</td>\n",
+       "      <td>5.935</td>\n",
+       "      <td>5.934</td>\n",
+       "      <td>5.934</td>\n",
+       "      <td>5.933</td>\n",
+       "      <td>5.932</td>\n",
+       "      <td>5.931</td>\n",
+       "      <td>5.927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5845</th>\n",
+       "      <td>2020-12-31 16:00:02.880</td>\n",
+       "      <td>6.012</td>\n",
+       "      <td>6.011</td>\n",
+       "      <td>6.011</td>\n",
+       "      <td>6.011</td>\n",
+       "      <td>6.010</td>\n",
+       "      <td>6.010</td>\n",
+       "      <td>6.009</td>\n",
+       "      <td>6.009</td>\n",
+       "      <td>6.008</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.937</td>\n",
+       "      <td>5.935</td>\n",
+       "      <td>5.934</td>\n",
+       "      <td>5.933</td>\n",
+       "      <td>5.931</td>\n",
+       "      <td>5.929</td>\n",
+       "      <td>5.927</td>\n",
+       "      <td>5.924</td>\n",
+       "      <td>5.920</td>\n",
+       "      <td>5.912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5846</th>\n",
+       "      <td>2020-12-31 19:00:02.880</td>\n",
+       "      <td>6.006</td>\n",
+       "      <td>6.006</td>\n",
+       "      <td>6.006</td>\n",
+       "      <td>6.006</td>\n",
+       "      <td>6.005</td>\n",
+       "      <td>6.004</td>\n",
+       "      <td>6.004</td>\n",
+       "      <td>6.004</td>\n",
+       "      <td>6.003</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.925</td>\n",
+       "      <td>5.923</td>\n",
+       "      <td>5.921</td>\n",
+       "      <td>5.919</td>\n",
+       "      <td>5.916</td>\n",
+       "      <td>5.914</td>\n",
+       "      <td>5.912</td>\n",
+       "      <td>5.908</td>\n",
+       "      <td>5.904</td>\n",
+       "      <td>5.896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5847</th>\n",
+       "      <td>2020-12-31 22:00:02.880</td>\n",
+       "      <td>6.001</td>\n",
+       "      <td>6.001</td>\n",
+       "      <td>6.001</td>\n",
+       "      <td>6.000</td>\n",
+       "      <td>6.000</td>\n",
+       "      <td>6.000</td>\n",
+       "      <td>5.999</td>\n",
+       "      <td>5.998</td>\n",
+       "      <td>5.998</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.915</td>\n",
+       "      <td>5.913</td>\n",
+       "      <td>5.910</td>\n",
+       "      <td>5.908</td>\n",
+       "      <td>5.906</td>\n",
+       "      <td>5.903</td>\n",
+       "      <td>5.901</td>\n",
+       "      <td>5.897</td>\n",
+       "      <td>5.892</td>\n",
+       "      <td>5.883</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5848 rows × 83 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Datetime  -81.000  -80.000  -79.000  -78.000  -77.000  \\\n",
+       "0    2019-01-01 01:00:02.880    5.952    5.952    5.952    5.952    5.952   \n",
+       "1    2019-01-01 04:00:02.880    5.949    5.949    5.949    5.949    5.949   \n",
+       "2    2019-01-01 07:00:02.880    5.947    5.946    5.946    5.946    5.946   \n",
+       "3    2019-01-01 10:00:02.880    5.944    5.944    5.944    5.943    5.943   \n",
+       "4    2019-01-01 13:00:02.880    5.942    5.942    5.942    5.941    5.941   \n",
+       "...                      ...      ...      ...      ...      ...      ...   \n",
+       "5843 2020-12-31 10:00:02.880    6.021    6.021    6.021    6.020    6.020   \n",
+       "5844 2020-12-31 13:00:02.880    6.016    6.016    6.016    6.016    6.015   \n",
+       "5845 2020-12-31 16:00:02.880    6.012    6.011    6.011    6.011    6.010   \n",
+       "5846 2020-12-31 19:00:02.880    6.006    6.006    6.006    6.006    6.005   \n",
+       "5847 2020-12-31 22:00:02.880    6.001    6.001    6.001    6.000    6.000   \n",
+       "\n",
+       "      -76.000  -75.000  -74.000  -73.000  ...  -9.000  -8.000  -7.000  -6.000  \\\n",
+       "0       5.951    5.951    5.950    5.950  ...   5.897   5.896   5.894   5.893   \n",
+       "1       5.948    5.948    5.948    5.947  ...   5.890   5.888   5.886   5.885   \n",
+       "2       5.945    5.945    5.945    5.944  ...   5.883   5.882   5.880   5.878   \n",
+       "3       5.943    5.942    5.942    5.942  ...   5.883   5.882   5.881   5.880   \n",
+       "4       5.941    5.940    5.940    5.940  ...   5.893   5.894   5.894   5.895   \n",
+       "...       ...      ...      ...      ...  ...     ...     ...     ...     ...   \n",
+       "5843    6.020    6.019    6.018    6.018  ...   5.925   5.923   5.922   5.921   \n",
+       "5844    6.015    6.014    6.014    6.013  ...   5.936   5.936   5.935   5.935   \n",
+       "5845    6.010    6.009    6.009    6.008  ...   5.937   5.935   5.934   5.933   \n",
+       "5846    6.004    6.004    6.004    6.003  ...   5.925   5.923   5.921   5.919   \n",
+       "5847    6.000    5.999    5.998    5.998  ...   5.915   5.913   5.910   5.908   \n",
+       "\n",
+       "      -5.000  -4.000  -3.000  -2.000  -1.000  -0.000  \n",
+       "0      5.891   5.890   5.888   5.885   5.882   5.876  \n",
+       "1      5.883   5.881   5.879   5.876   5.872   5.866  \n",
+       "2      5.876   5.875   5.872   5.870   5.866   5.860  \n",
+       "3      5.879   5.878   5.877   5.876   5.874   5.870  \n",
+       "4      5.896   5.897   5.897   5.897   5.896   5.892  \n",
+       "...      ...     ...     ...     ...     ...     ...  \n",
+       "5843   5.919   5.918   5.916   5.914   5.911   5.906  \n",
+       "5844   5.934   5.934   5.933   5.932   5.931   5.927  \n",
+       "5845   5.931   5.929   5.927   5.924   5.920   5.912  \n",
+       "5846   5.916   5.914   5.912   5.908   5.904   5.896  \n",
+       "5847   5.906   5.903   5.901   5.897   5.892   5.883  \n",
+       "\n",
+       "[5848 rows x 83 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = load_lake_data(\n",
+    "    model='simstrat',\n",
+    "    lake='aegeri',\n",
+    "    start='201901010000',      # ✓ String, 12 digits\n",
+    "    stop='202101010000',       # ✓ String, 12 digits  \n",
+    "    variables=\"T\",\n",
+    "    local_path='../data/Aegeri/aegeri.csv',  # Will check here first\n",
+    "    file_priority='csv',\n",
+    "    #save_csv='../data/Aegeri/aegeri.csv',  # Directory created automatically! ✓\n",
+    "    chunk_months=12,\n",
+    "    force_download=False\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c94c5b5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/bouffada/Documents/Git/Peak_alplakes/scripts'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c54eac2f",
    "metadata": {},
    "outputs": [
@@ -447,7 +890,8 @@
     "    start='201901010000',      # ✓ String, 12 digits\n",
     "    stop='202101010000',       # ✓ String, 12 digits  \n",
     "    variables=\"T\",\n",
-    "    local_path='data/Aegeri',  # Will check here first\n",
+    "    local_path='data/Aegeri/',  # Will check here first\n",
+    "    file_priority='csv',\n",
     "    save_csv='data/Aegeri/aegeri.csv',  # Directory created automatically! ✓\n",
     "    chunk_months=12,\n",
     "    force_download=False\n",
