--- a/scripts/3D_visualisation_map_commented.ipynb
+++ b/scripts/3D_visualisation_map_commented.ipynb
@@ -56,11 +56,7 @@
     "## STEP 1: Import Required Libraries\n",
     "## ESSENTIAL STEP\n",
     "\n",
-    "**What this does:** This cell loads all the necessary tools (libraries) that Python needs to:\n",
-    "- Download data from the internet\n",
-    "- Process numbers and data\n",
-    "- Create visualizations and plots\n",
-    "- Handle dates and times\n",
+    "\n",
     "\n",
     "**What you need to do:** Simply run this cell once. You don't need to change anything here.\n",
     "\n",
@@ -138,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "97dd1e48",
    "metadata": {},
    "outputs": [
@@ -169,13 +165,13 @@
     "# This function connects to the Alplakes server and downloads the data\n",
     "\n",
     "[data, lake] = fetch_and_save_alplakes_data_map(\n",
-    "    lake='zurich',              # 👈 CHANGE ME: Try 'geneva', 'constance', etc.\n",
-    "    date='202510231500',  # 👈 CHANGE ME: Format is YYYYMMDDHHMM\n",
-    "    depth='1',                  # 👈 CHANGE ME: Depth in meters (as a text string)\n",
+    "    lake='zurich',                          # 👈 CHANGE ME: Try 'geneva', 'constance', etc. check names on the Alplakes website\n",
+    "    date='202510231500',                    # 👈 CHANGE ME: Format is YYYYMMDDHHMM\n",
+    "    depth='1',                              # 👈 CHANGE ME: Depth in meters (as a text string)\n",
     "    variables=['temperature', 'velocity'],  # 👈 CHANGE ME: What data to download\n",
-    "    model='delft3d-flow',        # Keep this as is (the model type)\n",
-    "    verbose=True,                # 👈 CHANGE ME: Show download progress\n",
-    "    save_csv=True,              # 👈 CHANGE ME:Whether to save data as CSV file\n",
+    "    model='delft3d-flow',                   # Keep this as is (the model type)\n",
+    "    verbose=True,                           # 👈 CHANGE ME: Show download progress. (True/False)\n",
+    "    save_csv=True,                          # 👈 CHANGE ME: Whether to save data as CSV file (True/False)\n",
     ")\n",
     "\n",
     "\n",
@@ -203,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b03fcc80",
    "metadata": {},
    "outputs": [
@@ -234,7 +230,7 @@
     "fig, ax = plot_alplakes_pcolormesh(\n",
     "    data,                           # The data we downloaded in the previous cell\n",
     "    lake,                           # The lake name\n",
-    "    skip=3,                        # 👈 CHANGE ME: Skip every Nth arrow to reduce clutter\n",
+    "    skip=3,                         # 👈 CHANGE ME: If the plot looks too crowded with arrows, increase the 'skip' value\n",
     "    figsize=(10, 6),                # 👈 CHANGE ME: Size of the figure (width, height) in inches\n",
     "    plot_temp=True,                 # 👈 CHANGE ME: Show temperature as colored background (True / False)\n",
     "    plot_velocity=True,             # 👈 CHANGE ME: Show water currents as arrows (True / False)  \n",
@@ -242,17 +238,15 @@
     "    quiver_scale=10,                # 👈 CHANGE ME: Scale factor for the arrows (higher = smaller arrows)\n",
     "    quiver_width=0.002,             # 👈 CHANGE ME: Width of the arrows\n",
     "    save_fig=True,                  # 👈 CHANGE ME: Save the figure to a file (True / False\n",
-    "    dpi=300,                     # 👈 CHANGE ME: Resolution of the saved figure\n",
-    "    format='png',                    # 👈 CHANGE ME: File format if saving (png, jpg, tiff, etc)\n",
+    "    dpi=300,                        # 👈 CHANGE ME: Resolution of the saved figure\n",
+    "    format='png',                   # 👈 CHANGE ME: File format if saving (png, jpg, tiff, etc)\n",
     ")\n",
     "\n",
     "\n",
     "\n",
     "# Display the plot\n",
     "plt.show()\n",
-    "\n",
-    "# TIP: If the plot looks too crowded with arrows, increase the 'skip' value\n",
-    "# TIP: If you can't see temperature variations, adjust vmin and vmax to match your data range"
+    "\n"
    ]
   },
   {
@@ -292,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ab9bf24c",
    "metadata": {},
    "outputs": [
@@ -327,16 +321,16 @@
     "# This downloads temperature data for a specific location over a time period\n",
     "\n",
     "[data, lake] = fetch_and_save_alplakes_point_data(\n",
-    "    lake='zurich',              # 👈 CHANGE ME: Which lake\n",
-    "    start_time='202504230000',  # 👈 CHANGE ME: Start date (Oct 23, 2025 at midnight)\n",
-    "    end_time='202510240000',    # 👈 CHANGE ME: End date (Oct 24, 2025 at midnight)\n",
-    "    depth=1,                   # 👈 CHANGE ME: Depth(s) to analyze (in meters)\n",
-    "    lat=46.5,                   # 👈 CHANGE ME: Latitude (North-South position)\n",
-    "    lon=6.67,                   # 👈 CHANGE ME: Longitude (East-West position)\n",
-    "    variables=['temperature' ],  # What to measure (temperature)\n",
-    "    model='delft3d-flow',        # Keep this as is (the model type)\n",
-    "    verbose=True,               # 👈 CHANGE ME: Show download progress\n",
-    "    save_csv=True,             # 👈 CHANGE ME:Whether to save data as CSV file\n",
+    "    lake='zurich',                  # 👈 CHANGE ME: Which lake See Alplakes for list of lakes\n",
+    "    start_time='202504230000',      # 👈 CHANGE ME: Start date (Format: YYYYMMDDHHMMSS)\n",
+    "    end_time='202510240000',        # 👈 CHANGE ME: End date (Format: YYYYMMDDHHMMSS)\n",
+    "    depth=1,                        # 👈 CHANGE ME: Depth(s) to analyze (in meters)\n",
+    "    lat=46.5,                       # 👈 CHANGE ME: Latitude \n",
+    "    lon=6.67,                       # 👈 CHANGE ME: Longitude \n",
+    "    variables=['temperature' ],     # What to measure (temperature)\n",
+    "    model='delft3d-flow',           # Keep this as is (the model type)\n",
+    "    verbose=True,                   # 👈 CHANGE ME: Show download progress (True/False)\n",
+    "    save_csv=True,                  # 👈 CHANGE ME: Whether to save data as CSV file (True/False)\n",
     ")\n",
     "\n",
     "\n",
@@ -359,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f3e77a04",
    "metadata": {},
    "outputs": [
@@ -388,12 +382,12 @@
     "# This function creates a graph showing temperature over time\n",
     "\n",
     "fig, ax = plot_temperature_timeseries(\n",
-    "    data,  # Use the data we just downloaded\n",
-    "    lake,  # The lake name\n",
-    "    figsize=(14, 6),               # 👈 CHANGE ME: Size of the figure\n",
+    "    data,                           # no change needed. Use the data you just downloaded\n",
+    "    lake,                           # no change needed. The lake name according to ALplakes\n",
+    "    figsize=(14, 6),                # 👈 CHANGE ME: Size of the figure in inches (1in = 2.54cm)\n",
     "    save_fig=True,                  # 👈 CHANGE ME: Save the figure to a file (True / False)\n",
-    "    dpi=300,                     # 👈 CHANGE ME: Resolution of the saved figure \n",
-    "    format='png'                   # 👈 CHANGE ME: File format if saving (png, jpg, tiff, etc\n",
+    "    dpi=300,                        # 👈 CHANGE ME: Resolution of the saved figure \n",
+    "    format='png'                    # 👈 CHANGE ME: File format if saving (png, jpg, tiff, etc)\n",
     ")\n",
     "\n",
     "\n",
